examples/test/testpolicy2904.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2904
  namespace: namespace476
spec:
  podSelector:
    matchLabels:
      key17: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value16
          key41: value18
          key15: value46
      podSelector:
        matchLabels:
          key0: value32
          key30: value0
          key16: value43
